--- a/Views/Cliente/Edit.cshtml
+++ b/Views/Cliente/Edit.cshtml
@@ -16,7 +16,7 @@
 
             @(Model.IdPessoaNavigation.PessoaFisica != null ?
             await Html.PartialAsync("ClientePessoaFisica") :
-            await Html.PartialAsync("ClientePessoaJuridica"));
+            await Html.PartialAsync("ClientePessoaJuridica"))
 
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -25,7 +25,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" onclick="return formatarCpf();" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -37,4 +37,27 @@
 
 @section Scripts {
 @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        debugger;
+        var cpf = $('#IdPessoaNavigation_CpfCnpj').val();
+        if (cpf.length < 11) {
+            var zerosCpf = '0'.repeat(11 - cpf.length);
+            cpf = zerosCpf + cpf;
+        }
+        $('#Cpf').val(cpf);
+        $('#Cpf').mask('000.000.000-00', { reverse: true });
+    });
+
+    function formatarCpf() {
+        debugger;
+        var cpfNumero = $('#Cpf').unmask().val();
+        $('#IdPessoaNavigation_CpfCnpj').val(cpfNumero);
+        return true;
+    }
+
+</script>
+
+
 }
