--- a/Views/Cliente/ClientePessoaFisica.cshtml
+++ b/Views/Cliente/ClientePessoaFisica.cshtml
@@ -16,3 +16,13 @@
     <label class="control-label" asp-for="IdPessoaNavigation.CpfCnpj"> </label>
     <input type="text" id="Cpf" name="Cpf" class="form-control" />
 </div>
+<div class="form-group">
+    <input type="hidden" asp-for="IdPessoaNavigation.PessoaFisica.DataNascimento" />
+    <label class="control-label" asp-for="IdPessoaNavigation.PessoaFisica.DataNascimento"> </label>
+    <input type="date" id="DataNascimento" name="DataNascimento" class="form-control" />
+</div>
+<div class="form-group">
+    <input type="hidden" asp-for="IdPessoaNavigation.PessoaFisica.Rg" />
+    <label class="control-label" asp-for="IdPessoaNavigation.PessoaFisica.Rg"> </label>
+    <input type="text" id="Rg" name="Rg" class="form-control" />
+</div>
